src/styles/global.css
@import "tailwindcss";
@theme {
  --font-outfit: var(--font-outfit);
  --font-geist: var(--font-geist);

  --color-brand-50: #f0f9ff;
  --color-brand-100: #e0f2fe;
  --color-brand-200: #bae6fd;
  --color-brand-300: #7dd3fc;
  --color-brand-400: #38bdf8;
  --color-brand-500: #0ea5e9;
  --color-brand-600: #0284c7;
  --color-brand-700: #0369a1;
  --color-brand-800: #075985;
  --color-brand-900: #0c4a6e;
}

@layer base {
  html {
    font-family: var(--font-geist);
    font-weight: 450; /* Slightly heavier than normal (400) */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: var(--font-outfit);
  }
}

@layer utilities {
  .reveal {
    opacity: 0;
    transform: translateY(20px);
    transition: all 0.8s cubic-bezier(0.16, 1, 0.3, 1);
  }

  .reveal.active {
    opacity: 1;
    transform: translateY(0);
  }

  .reveal-stagger-1 {
    transition-delay: 100ms;
  }
  .reveal-stagger-2 {
    transition-delay: 200ms;
  }
  .reveal-stagger-3 {
    transition-delay: 300ms;
  }
  .reveal-stagger-4 {
    transition-delay: 400ms;
  }

  @keyframes marquee {
    0% {
      transform: translateX(0);
    }
    100% {
      transform: translateX(-100%);
    }
  }

  .animate-marquee {
    animation: marquee 30s linear infinite;
  }

  .animate-marquee2 {
    animation: marquee 30s linear infinite;
  }
}

